	    Autodetect  <sys/un.h>  header file

	* proto/scheduler.conf.in, scheduler/mailq.c, scheduler/mq2auth.c,
	  scheduler/prototypes.h, scheduler/readconfig.c,
	  scheduler/scheduler.c, scheduler/transport.c:
	    * scheduler.conf file can now have:
	        PARAMmailqpath = "UNIX:/path/to/af_unix/mailq/port"
		PARAMmailqpath = "TCP:174"
	    * mailq -p /path/to/af_unix/mailq/port

	    Those are for running multiple schedulers in the system,
	    and allowing each different mailq port.

1999-11-11  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/mq2.c, scheduler/scheduler.c, scheduler/prototypes.h,
	  scheduler/threads.c, scheduler/readconfig.c, proto/scheduler.conf.in,
	  scheduler/mq2auth.c, proto/scheduler.auth:
	    Modified somewhat commands, and how they are selected.
	    Now  "scheduler.auth"  file defines which operations are
	    allowed (a bit-mask).
	
	* proto/Makefile.in:
	    Wrong file referenced; must be  scheduler.auth  !
	    ( not smtpserver.auth! )

	* lib/selfaddrs.c:
	    When  HAVE_SA_LEN  is defined, we used wrong definition
	    for  sa_len  field within the union.

	* transports/libta/tasyslog.c, router/rtsyslog.c:
	    An experiment on alternate TRANSPORT syslog format:
	    if ZENV variable SYSLOGFLG has 'T', the classical ", "
	    separated fields are printed.  If the flag is 't',
	    field separator is TAB-character.   Similarly for ROUTER
	    there are 'R' and 'r' keycodes.

1999-11-09  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* utils/makedb/makedb.c:
	    When using NDBM format, if the STORE returns error with
	    errno=ENOSPC, we report that KEY.LEN+DATA.LEN exceed 1kB
	    which NDBM allows...

1999-11-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/readconfig.c, scheduler/threads.c, scheduler/conf.c,
	  scheduler/mailq.c, scheduler/mq2.c, scheduler/mq2auth.c,
	  scheduler/prototypes.h:
	    'mailq -Q' and 'mailq -QQ' work when scheduler runs with '-M2'
	    now :)  Authentication wants